cabal-version:      3.0
name:               one-hundred-checkboxes
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             One Hundred Checkboxes project authors <https://github.com/natanaelsantana/one-hundred-checkboxes>
maintainer:         One Hundred Checkboxes project maintainers <https://github.com/natanaelsantana/one-hundred-checkboxes>
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall

executable one-hundred-checkboxes
    import:           warnings
    main-is:          Main.hs
    other-modules:    Server.Routes
                      Server.SSE
                      Api.Model
    build-depends:    base,
                      servant,
                      aeson,
                      warp,
                      servant-server,
                      wai-cors,
                      wai,
                      wai-app-static,
                      postgresql-simple,
                      bytestring,
                      mtl,
                      stm,
                      http-types
    hs-source-dirs:   app
    default-language: Haskell2010
